--- a/src/components/RecipeForm.module.css
+++ b/src/components/RecipeForm.module.css
@@ -40,13 +40,14 @@ body {
     padding: 0.75rem 1.25rem;
   }
   button[type="submit"] {
+    margin-bottom: 1rem;
     background-color: hsl(214, 70%, 46%);
     color: white;
   }
   
   button[type="reset"] {
     text-decoration: underline;
-    margin-left: 1rem;
+    
   }
   button[type="reset"]:hover {
     text-decoration: none;
@@ -67,11 +68,11 @@ button:focus {
     box-shadow: 0 0 0 4px black;
   }
 
-  .gridinstruction1{
+  .grid1{
     grid-column: 1 / span 2;
     grid-row: 4;
   }
-  .gridinstruction{
+  .grid{
     grid-column: 1 / span 2;
     grid-row: 2;
   }
