--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     padding-left: 1rem;
 
