--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -13,3 +13,12 @@
 footer p{
     margin-top: 10px;
 }
+
+.footer a{
+    text-decoration: none;
+
+}
+
+.footer a:hover{
+    color: rgb(255, 0, 43);
+}
