--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,4 +1,4 @@
-.homevideo {
+.homeVideo {
   position: fixed;
   right: 0;
   bottom: 0;
@@ -7,7 +7,7 @@
   min-height: 100%;
 }
 
-.gridhome{
+.gridHome{
   margin-top: 5%;
   position: relative;
     display: grid;
@@ -37,7 +37,6 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
-  color: rgb(206, 98, 190);
   text-transform: uppercase;
   font-size: 60px;
   font-weight: 400;
@@ -45,6 +44,7 @@
   box-shadow: 0 10px 30px -3px rgba(0,0,0,.1);
   cursor: pointer;
 }
+
 
 .card a {
   display: block;
@@ -60,16 +60,6 @@ h1 {
   font-weight: 900;
 }
 
-.card .enclosed {
-  background: #000;
-  line-height: 1;
-  color: rgba(249, 198, 26, 1);
-  padding: 0 5px;
-  display: inline-block;
-  transform: translate(-1px, 1px) scale(0.75);
-  transform-origin: right center;
-}
-
 .wrapper:before {
   --bw: 9px;
   grid-area: 1 / 1;
@@ -82,7 +72,7 @@ h1 {
   background: transparent;
   transform: translateX(-60px) rotateY(-30deg) rotateX(15deg) scale(1.03);
   pointer-events: none;
-  border: var(--bw) solid rgb(193, 41, 14);
+  border: var(--bw) solid rgb(175, 104, 91);
   box-sizing: content-box;
 }
 
@@ -90,6 +80,7 @@ h1 {
 .wrapper:hover > div,
 .wrapper:hover:before {
   transform: none;
+  
 }
 
 
@@ -97,4 +88,5 @@ h1 {
 .wrapper:before {
   will-change: transform;
   transition: .3s transform cubic-bezier(.25,.46,.45,1);
+  
 }
