--- a/src/components/RecipeForm.module.css
+++ b/src/components/RecipeForm.module.css
@@ -5,20 +5,20 @@ body {
     color: #333;
     font: 100% / normal sans-serif;
   }
+
+ 
   
   main {
     
     margin: 0 auto;
     padding: 1rem 0;
-    width: 80%;
+    width: auto;
     max-width: 80rem;
   }
-.heading{
-    margin-left: 40rem;
-  }
+
   form {
    overflow: auto;
-    margin-left: 20%;
+    margin-bottom: 100px;
     box-sizing: border-box;
     padding: 2rem;
     border-radius: 1rem;
