--- a/src/components/SeeMore.module.css
+++ b/src/components/SeeMore.module.css
@@ -6,24 +6,77 @@
 }
 
 
-
 .image img{
     object-fit: cover;
     width: 600px;
 }
-table, th, td {
-    border: 1px solid  ;
-    padding: 5px;
-  }
+
+.description p{
+  margin-top: 10px;
+}
+/* Table CSS*/
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 
   .imgFlg{
     position: relative;
     margin-left: 5%;
     width: 80px;
+    margin-bottom: 10px;
   }
 
   .instruction{
     margin-bottom: 20px;
   }
 
+ 
+
+/* CSS */
+.buttonBack {
+  --b: 3px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: #373B44;
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.buttonBack:hover,
+.buttonBack:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+.buttonBack:active {
+  background: var(--color);
+  color: #fff;
+}
   
