--- a/src/components/Recipecard.module.css
+++ b/src/components/Recipecard.module.css
@@ -6,18 +6,27 @@
   
 }
 
+@media only screen and (max-width: 600px) {
+  .container{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+  
+}
 
 
 .flagImage img{
   
   width: 80px;
   position: absolute;
-  top: 58%;
+  top: 55%;
   left: 1%;
 }
 
 .card {
-    height: 620px;
+    height: auto;
     width: 450px;
     border-radius: 15px;
     border: 2px solid rgb(0, 0, 0);
