--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -3,20 +3,21 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 3rem;
-    padding-bottom: 20px;
+    height: 15px;
+    padding-bottom: 5px;
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    font-size: 2rem;
+    font-size: 0.7rem;
 }
 
 footer p {
-    margin-top: 10px;
+    margin-top: 4px;
 }
 
 .footer a {
     text-decoration: none;
+    color: green;
 
 }
 
