--- a/src/components/RecipeForm.module.css
+++ b/src/components/RecipeForm.module.css
@@ -6,18 +6,14 @@ body {
   font: 100% / normal sans-serif;
 }
 
-
-
-main {
-
-  margin: 0 auto;
-  padding: 1rem 0;
-  width: auto;
-  max-width: 80rem;
+.heading{
+  text-align: center;
 }
 
 form {
   overflow: auto;
+  width: 50%;
+  margin-left: 25%;
   margin-bottom: 100px;
   box-sizing: border-box;
   padding: 2rem;
