--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -18,3 +18,12 @@
     
 }
 
+@media only screen and (max-width: 600px) {
+    .header a{
+        margin-left: 0; 
+    }
+
+    .header h1{
+        font-size: 15px;
+    }
+  }
